--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.github.clans:fab:1.6.4'
 
 }
 apply plugin: 'com.google.gms.google-services'
