--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.github.clans:fab:1.6.4'
-
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
 }
 apply plugin: 'com.google.gms.google-services'
